--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
         "type": "PARAMETER",
         "params": {
           "name": {
-            "string": "foo"
+            "string": "api_key"
           }
         }
       },
