--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,12 @@
   "v2": {
     "swagger": {
       "auth": {
-        "type": "PARAMETER",
-        "params": {
-          "name": {
-            "string": "api_key"
-          }
-        }
+        "type": "PARAMETER"
+        // "params": {
+        //   "name": {
+        //     "string": "api_key"
+        //   }
+        // }
       },
       "source": "giphy.json"
     },
