--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "v2": {
     "swagger": {
       "auth": {
-        "description": "An api key can be generated here https://developers.giphy.com/dashboard/. You can also use Giphy's test api key: dc6zaTOxFJmzC",
+        "description": "An api key can be generated at https://developers.giphy.com/dashboard/. You can also use Giphy's test api key: dc6zaTOxFJmzC",
         "type": "PARAMETER",
         "params": {
           "name": {
